[package]
name = "yuzu-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["json", "stream"] }
tokio = { version = "1.36.0", features = ["full"] }
futures-util = "0.3.30"
clap = { version = "4.5.1", features = ["derive"] }
serde = {version = "*", features = ["derive"]}
serde_json = {version = "*"}
rayon = {version ="*"}
indicatif = {version = "*"}
walkdir = {version = "*"}

[target.x86_64-unknown-linux-gnu]
rustflags = ["-Ctarget-cpu=native"]